--- a/assets/scss/elements/_mega-menu.scss
+++ b/assets/scss/elements/_mega-menu.scss
@@ -63,6 +63,11 @@
 	display: flex;
 	height: 100%;
 	cursor: default;
+	align-items: center;
+
+	i {
+	  margin-right: 10px;
+	}
   }
 }
 
